Get current user. Request
